--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   padding-right: 14px;
   position: relative;
   top: 20%;
+  color: #514F4B;
 }
 .res_header_bottom {
   height: 150px;
@@ -39,6 +40,7 @@ body {
   padding-right: 14px;
   padding-top: 1px;
   line-height: 6px;
+  color: #514F4B;
 }
 .res_content {
   margin-top: 40px;
@@ -49,9 +51,11 @@ body {
 .res_content_desc {
   font-size: 24px;
   font-family: Helvetica, sans-serif; 
+    color: #514F4B;
+
 }
 .res_content_header {
-  background-color: #06205A;
+  background-color: #374F41;
   width: 500px;
   margin-top: 30px;
   font-size: 24px;
@@ -67,12 +71,14 @@ body {
   font-size: 14px;
   font-family: Helvetica, sans-serif; 
   line-height: 4px;
+  color: #514F4B;
 }
 .res_content_work_desc {
   width: 700px;
   font-size: 16px;
   font-family: Helvetica, sans-serif; 
   line-height: 20px;
+  color: #514F4B;
 }
 .res_content_education {
   width: 500px;
@@ -80,6 +86,7 @@ body {
   font-size: 14px;
   font-family: Helvetica, sans-serif; 
   line-height: 4px;
+  color: #514F4B;
 }
 .res_content_gallery_item {
   margin-top: 20px;
